# clj-monorepo

./: .codox.edn  .gitignore  CLAUDE.md  MONOREPO.md  README.md  WORKFLOWS.md  deps.edn  docker-compose.yml
.clj-kondo/: config.edn
authn/: README.md  deps.edn
ball-tracking/: .gitignore  DESIGN.md  deps.edn  package.json  shadow-cljs.edn
ball-tracking/scripts/: export_model.py  pyproject.toml
bashketball-editor-api/: ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_PLAN.md  JGIT_ARCHITECTURE.md  README.md  deps.edn
bashketball-editor-ui/: Dockerfile  README.md  deps.edn  nginx.conf  package-lock.json  package.json  shadow-cljs.edn  tailwind.config.js
bashketball-game/: README.md  RULES.md  deps.edn  package.json  shadow-cljs.edn
bashketball-game-api/: Dockerfile  deps.edn
bashketball-game-ui/: Dockerfile  IMPLEMENTATION_PLAN.md  deps.edn  package-lock.json  package.json  shadow-cljs.edn  tailwind.config.js
bashketball-schemas/: README.md  deps.edn
bashketball-ui/: README.md  deps.edn  package.json  shadow-cljs.edn
basketball-editor-ui/: deps.edn  package.json  shadow-cljs.edn
clj-jobrunr/: DESIGN.md  PLAN.md  README.md  build.clj  deps.edn
cljs-tlr/: README.md  deps.edn  package.json  shadow-cljs.edn
db/: README.md  deps.edn
exclusive-initializer/: README.md  deps.edn
graphql-client/: deps.edn  package.json  shadow-cljs.edn
graphql-server/: README.md  deps.edn
oidc/: .gitignore  README.md  TESTING.md  deps.edn  (+2 more)
oidc-apple/: deps.edn
oidc-github/: README.md  deps.edn
oidc-google/: README.md  deps.edn
oidc-provider/: README.md  deps.edn
(+773 files in other folders)
