[project]
name = "ball-tracking-scripts"
version = "0.1.0"
description = "Scripts for exporting YOLO models to TensorFlow.js"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.3.0",
    "tensorflow>=2.13.0",
    "tf_keras<=2.19.0",
    "onnx>=1.12.0,<2.0.0",
    "onnx2tf>=1.26.3",
    "onnxslim>=0.1.71",
    "onnxruntime",
    "sng4onnx>=1.0.1",
    "onnx_graphsurgeon>=0.3.26",
    "ai-edge-litert>=1.2.0,<1.4.0",
    "tensorflowjs>=4.0.0",
]

[tool.uv]
dev-dependencies = []
